# Msid_Project

./: .flake8  .gitignore  .pylintrc  READ.ME  README.md  TODO  __main__.py  csv_format.txt  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  mypy.ini  pyproject.toml  raport.aux  raport.fdb_latexmk  raport.fls  raport.out  raport.tex  tmp  your_report.html
data_processing/: dataframes.py  models.py  save_data.py
project/: __main__.py  setup.py  setup_logging.py
project/data/: holidays_data.csv  police_data.csv  weather_data.csv  weekends_data.csv
project/data_processing/: dataframes.py  downloader.py  downloaders.py  models.py  move_data.py  save_data.py
project/visualization/: stats.py  tmp.py  visualization.py
stats/: stats.py
visualization/: tmp.py
