[tool.poetry]
name = "msid-project"
version = "0.1.0"
description = ""
authors = ["Jakub Śliwka <kubapplll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.13.2"
black = "^24.4.0"
mypy = "^1.9.0"
pylint = "^3.1.0"
flake8 = "^7.0.0"
taskipy = "^1.12.2"
pandas = "^2.2.2"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.2.1"
logging = "^0.4.9.6"
formatting = "^0.0.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
keras = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
formatting = "python -m black . && python -m isort ."
flake8 = "poetry run python -m flake8 project && echo All is ok"
pylint = "pylint project"
mypy = "python -m mypy --namespace-packages project"